Tue Mar  7 18:09:36 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added configure option to use error-checking mutexes instead
	  of the (portable) default.

Tue Mar  7 12:20:08 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Sleepycat backend now compiles, although undoubtably isn't
	  going to work properly.

Tue Mar  7 12:17:47 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added OmRangeError and OmDatabaseError exceptions.

Mon Mar  6 18:05:17 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* stemtest.pl now handles the child getting a Ctrl-C nicely.

Fri Mar  3 15:25:42 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added to one of the tests in apitest a check that the weights
	  returned by a query are as expected.  This will fail if weighting
	  schemes are changed, deliberately or accidentally.

Fri Mar  3 11:25:36 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* OmQuery now does a better job of collapsing sub-queries
	  with the same operator.  Yet another test now passes.

Thu Mar  2 17:47:29 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Moved omenquire and omstem into new directory api

	* Split omenquire.cc into omenquire, omquery, and omdatabase

Thu Mar  2 14:53:47 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Removed all mentions of virtual inheritance.
	
Thu Mar  2 10:58:19 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Begun to abstract statistics requesting and collecting operations
	  (common/stats.h)

	* Made heirarchy of Match objects: Match, LeafMatch, MultiMatch.

Thu Mar  2 10:39:20 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added locks to OmDatabase methods

Wed Mar  1 19:14:02 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Separated OmDatabase out from OmEnquire, and fixed the tests.

Tue Feb 29 17:41:32 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>
