@@ -25,6 +25,7 @@
 
 #include <om/omtypes.h>
 #include <om/omdocument.h>
+#include <om/omerror.h>
 #include <string>
 #include <vector>
 #include <set>
@@ -671,4 +672,113 @@ class OmEnquire {
 	om_termname_list get_matching_terms(const OmMSetItem &mitem) const;
 };
 
+///////////////////////////////////////////////////////////////////
+// OmBatchEnquire class
+// ===============
+/** This class provides an interface to submit batches of queries.
+ *  This will be no worse than using a plain OmEnquire object
+ *  multiple times, and this is how it is currently implemented.
+ *  In future it may be reimplemented in a way which would make
+ *  running many queries significantly more effecient than would
+ *  be possible with individual queries and OmEnquire.
+ *
+ *  @exception OmInvalidArgumentError will be thrown if an invalid
+ *  argument is supplied, for example, an unknown database type.
+ *
+ *  @exception OmOpeningError will be thrown if the database cannot
+ *  be opened (for example, a required file cannot be found).
+ *  
+ */
+
+class OmBatchEnquire {
+    private:
+	class Internal;
+	Internal *internal;
+
+	// disallow copies
+	OmBatchEnquire(const OmBatchEnquire &);
+	void operator=(const OmBatchEnquire &);
+    public:
+        OmBatchEnquire(const OmDatabase &db);
+        ~OmBatchEnquire();
+
+	struct query_desc {
+	    OmQuery query;
+	    om_doccount first;
+	    om_doccount maxitems;
+	    const OmRSet * omrset;
+	    const OmMatchOptions * moptions;
+	    const OmMatchDecider * mdecider;
+
+	    // default constructor to set pointers to defaults.
+	    query_desc() : omrset(0), moptions(0), mdecider(0) {};
+	};
+	    
+	typedef vector<query_desc> query_batch;
+
+	/** Set up the queries to run.
+	 *
+	 *  @param queries_  A set of structures describing each query
+	 *  to be performed.  See OmEnquire::set_query and
+	 *  OmEnquire::get_mset for details of the meaning of each
+	 *  member.
+	 *
+	 *  @exception OmInvalidArgumentError  See class documentation.
+	 *  @exception OmOpeningError          See class documentation.
+	 */
+	void set_queries(const query_batch &queries_);
+
+	class batch_result {
+	    private:
+		bool isvalid;
+		OmMSet result;
+	    public:
+		batch_result(const OmMSet &mset, bool isvalid_);
+
+		OmMSet value() const;
+
+		bool is_valid() const { return isvalid; }
+	};
+	typedef vector<batch_result> mset_batch;
+
+	/** Get (a portion of) the match sets for the current queries.
+	 *
+	 *  @return          An collection of type
+	 *  OmBatchEnquire::mset_batch.  Each element is a batch_result
+	 *  object.  The actual OmMSet result will be returned by
+	 *  batch_result::value().  If that query failed, then value()
+	 *  will throw an exception.  The validity can be checked with
+	 *  the is_valid() member.
+	 *
+	 *  @exception OmOpeningError          See class documentation.
+	 */
+	mset_batch get_msets() const;
+
+	/** @memo Get the document info by document id.
+	 *
+	 *  @doc See OmEnquire::get_doc for details.
+	 */
+	const OmDocument *get_doc(om_docid did) const;
+
+	/** @memo Get the document info by match set item.
+	 *
+	 *  @doc See OmEnquire::get_doc for details
+	 */
+	const OmDocument *get_doc(const OmMSetItem &mitem) const;
+
+
+	/** @memo Get terms which match a given document, by document id.
+	 * 
+	 *  @doc
+	 *  See OmEnquire::get_matching_terms for details.
+	 */
+	om_termname_list get_matching_terms(om_docid did) const;
+
+	/** @memo Get terms which match a given document, by match set item.
+	 *
+	 *  @doc
+	 *  See OmEnquire::get_matching_terms for details.
+	 */
+	om_termname_list get_matching_terms(const OmMSetItem &mitem) const;
+};
 #endif /* OM_HGUARD_OMENQUIRE_H */
